--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
     <div class="container-1">
         <div class="welcome">
-            <h1>Welcome to Salt N Pepper <br> 
-                 Restaurants! Our Brands</h1>
+            <h1>Welcome to Salt N Pepper <br>
+                Restaurants! Our Brands</h1>
             <p class="p-1">Please click our brands below for further information, reservations to order online!</p>
         </div>
 
@@ -71,12 +71,14 @@
     <div class="container-2">
         <div class="r-franchises">
             <h2><span class="l-container-2">Salt N Pepper</span><br>Restaurant Franchises</h2>
-            <p class="p-2">Each of our franchises are individually managed. For further details, kindly contact them directly.</p>
+            <p class="p-2">Each of our franchises are individually managed. For further details, kindly contact them
+                directly.</p>
         </div>
 
         <div class="r-isl">
             <div class="isl-text">
-                <h2><span class="red"><small class="small">ISLAMABAD</small></span><br> <span class="white">Salt N Pepper Restaurant</span></h2>
+                <h2><span class="red"><small class="small">ISLAMABAD</small></span><br> <span class="white">Salt N
+                        Pepper Restaurant</span></h2>
                 <p><i class="fa fa-map-marker-alt" aria-hidden="true"></i> Plot# 55, Shabbir Plaza, Blue Area, F-6,
                     Islamabad<br><br><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:051-2604904-6"
                         class="phone">Ph: 051-2604904-6</a></p>
@@ -94,7 +96,8 @@
                 <img src="https://images-beta.tossdown.com/site/11771dbf-36a1-4684-a55e-18af61e0f77c.webp">
             </div>
             <div class="fsd-txt">
-                <h2><span class="red"><small class="small">FAISALABAD</small></span><br> <span class="white">Salt N Pepper Restaurant</span></h2>
+                <h2><span class="red"><small class="small">FAISALABAD</small></span><br> <span class="white">Salt N
+                        Pepper Restaurant</span></h2>
                 <p><i class="fa fa-map-marker-alt" aria-hidden="true"></i> 4-Kohinoor City, Faisalabad<br><br><i
                         class="fa fa-phone" aria-hidden="true"></i> <a href="tel:041-8711404" class="phone">Ph:
                         041-8711404</a></p>
@@ -104,7 +107,8 @@
 
         <div class="r-bwl">
             <div class="bwl-txt">
-                <h2><span class="red"><small class="small">BAHAWALPUR</small></span><br> <span class="white">Salt N Pepper Restaurant</span></h2>
+                <h2><span class="red"><small class="small">BAHAWALPUR</small></span><br> <span class="white">Salt N
+                        Pepper Restaurant</span></h2>
                 <p><i class="fa fa-map-marker-alt" aria-hidden="true"></i> D.C Chowk, opposite Commissioner House,
                     Bahawalpur<br><br><i class="fa fa-phone" aria-hidden="true"></i> <a href="tel:062-2740271-2"
                         class="phone">Ph: 062-2740271-2</a></p>
@@ -245,8 +249,8 @@
         </div>
 
         <div class="v-grw">
-            <div class="grw-pic"><img
-                    src="https://images-beta.tossdown.com/site/7aba8915-02ed-46ee-bd96-1063abe072fa.webp">
+            <div class="grw-pic"><img height="350px" width="600px"
+                    src="https://images-beta.tossdown.com/site/0df39a08-2dca-4998-adda-4ca66b1132cb.webp">
             </div>
 
             <div class="grw-text">
@@ -256,7 +260,7 @@
                         href="tel:055-3884500 l " class="phone">Ph: 055-3884500 l</a> ,
                     <a href="tel:055-3880400" class="phone">Ph: 055-3880400</a>
                 </p>
-                <div class="button-4">Get Directions <i class="fa fa-solid fa-arrow-right"></i></div>
+                <div class="button-4">Get Directions <i class="fa fa-solid fa-arrow-right" id="green"></i></div>
             </div>
 
 
@@ -365,7 +369,69 @@
 
     <!-- FOOTER -->
 
+    <footer>
+        <div class="footer">
+            <div class="first">
+                <img class="web-logo"
+                    src="https://static.tossdown.com/images/da52b9b3-ba03-4d41-bc8f-ac9e7d6a598b.webp">
 
+                <div class="f-text-1">The Salt’n Pepper Restaurants are an example of gracious dinning, outstanding service,
+                    extraordinary classic and contemporary cuisine. The restaurants have become the ultimate dinning
+                    destinations in Lahore. From family occasions to business dinner and moments of the heart, this
+                    place is where unforgettable memories are made.
+                </div>
+
+                <div class="f-text-2">
+                    Terms & conditions | Privacy policy
+                </div>
+            </div>
+
+            <div class="second">
+                <h4><b>Site Links</b></h4>
+                <div class="s-list">
+                    <div>Home</div>
+                    <div>About Us</div>
+                    <div>Publications</div>
+                    <div>Get a Franchise</div>
+                    <div>Feedback</div>
+                </div>
+            </div>
+
+            <div class="third">
+                <h4>Contact Us</h4>
+                <div class="t-list">
+                    <div class="t-text">Head office Address</div>
+                    <div class="phone">23-Usman Block, New GardenTown, Lahore, Pakistan</div>
+                    <div class="t-text">Head office number</div>
+                    <div><a class="phone" href="tel:+92 42 358 509 31">+92 42 358 509 31</a></div>
+                    <div><a class="phone" href="tel:+92 42 358 509 30">+92 42 358 509 30</a></div>
+                    <div class="t-text">Email Address</div>
+                    <div><a class="phone" href="mailto:snpfood@brain.net.pk">snpfood@brain.net.pk</a></div>
+                    <div class="t-text">Free delivery number</div>
+                    <div><a class="phone" href="tel:+92 42 111 100 678">+92 42 111 100 678</a></div>
+                    <div><a class="phone" href="tel:+92 03 111 444 610">+92 03 111 444 610</a></div>
+                </div>
+            </div>
+
+            <div class="fourth"> 
+                <h4>Follow Us</h4>
+                <div class="fo-list">
+                    <div class="iconsss"><i id="red-icon" class="fab fa-facebook-f" aria-hidden="true"></i> 
+                        <i id="red-icon" class="fab fa-instagram" aria-hidden="true"></i>
+                        <i id="red-icon" class="fab fa-twitter" aria-hidden="true"></i>
+                    </div>
+                    <div><img src="https://static.tossdown.com/images/15a204d9-9623-4aea-8c7a-a4419417ee7e.webp"></div>
+                    <div><img src="https://static.tossdown.com/images/c5c0daad-373c-4dd5-a8e8-6dcbbd142963.webp"></div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="last">
+            <div class="l-1">© 2023 Salt'n Pepper Restaurant.</div>
+            <div class="l-2">Powered Bytossdown.com</div>
+        </div>
+    </footer>
 </body>
 
 </html>
